--- a/HealthCareCenter/nbproject/project.properties
+++ b/HealthCareCenter/nbproject/project.properties
@@ -31,8 +31,8 @@ file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files (x86)\\NetB
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
