--- a/HealthCareCenter/nbproject/project.properties
+++ b/HealthCareCenter/nbproject/project.properties
@@ -189,7 +189,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
